force-app/main/default/objects/AH_UDC_Log__c/AH_UDC_Log__c.object-meta.xml
<CustomObject>
    <description>This log is for use by Amadeus Hospitality Solutions Delivery custom code.</description>
    <label>UDC Log</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UDC Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>