force-app/main/default/objects/AH_UDC_Log__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <description>Text or numeric code associated with the log entry which could be used for querying and filtering.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>