force-app/main/default/objects/AH_UDC_Log__c/fields/FunctionalArea__c.field-meta.xml
<CustomField>
    <fullName>FunctionalArea__c</fullName>
    <description>Name of the Central Sales functional area in which the event that is being logged occurred. (e.g. ELS, Create Opportunity, Notifications, etc)</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Name of the Central Sales functional area in which the event that is being logged occurred. (e.g. ELS, Create Opportunity, Notifications, etc)</inlineHelpText>
    <label>Functional Area</label>
    <length>100</length>
    <type>Text</type>
</CustomField>