force-app/main/default/objects/AH_UDC_Log__c/fields/LogDate__c.field-meta.xml
<CustomField>
    <fullName>LogDate__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>The date and time of the log entry, which may be different from CreatedDate.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Log Date</label>
    <type>DateTime</type>
</CustomField>