force-app/main/default/objects/AH_UDC_Log__c/fields/LogText__c.field-meta.xml
<CustomField>
    <fullName>LogText__c</fullName>
    <description>The detailed text content of the log entry.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Log Text</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>