force-app/main/default/objects/AH_UDC_Log__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>This is the title message for the log.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is the title message for the log.</inlineHelpText>
    <label>Message</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>