force-app/main/default/objects/AH_UDC_Log__c/fields/OrgName__c.field-meta.xml
<CustomField>
    <fullName>OrgName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Organization Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>