force-app/main/default/objects/AH_UDC_Log__c/fields/RecordId__c.field-meta.xml
<CustomField>
    <fullName>RecordId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Opportunity / RFP Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>