force-app/main/default/objects/AH_UDC_Log__c/fields/RelatedObjectType__c.field-meta.xml
<CustomField>
    <fullName>RelatedObjectType__c</fullName>
    <description>The type of object that the log is about.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Related Object Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>