force-app/main/default/objects/AH_UDC_Log__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Identifies the source of the log entry, such as an Apex class, function, or operation within a function. Use to allow querying, filtering, and pinpointing of source area in code.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Identifies the source of the log entry, such as an Apex class, function, or operation within a function. Use to allow querying, filtering, and pinpointing of source area in code.</inlineHelpText>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>