force-app/main/default/objects/AH_UDC_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LogDate__c</columns>
    <columns>Level__c</columns>
    <columns>Source__c</columns>
    <columns>Code__c</columns>
    <columns>LogText__c</columns>
    <columns>IsProcessed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>