force-app/main/default/objects/AH_UDC_Log__c/listViews/All_Today.listView-meta.xml
<ListView>
    <fullName>All_Today</fullName>
    <columns>NAME</columns>
    <columns>LogDate__c</columns>
    <columns>Level__c</columns>
    <columns>FunctionalArea__c</columns>
    <columns>Source__c</columns>
    <columns>Code__c</columns>
    <columns>LogText__c</columns>
    <columns>IsProcessed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>All Today</label>
</ListView>