force-app/main/default/objects/AH_UDC_Log__c/listViews/Audit.listView-meta.xml
<ListView>
    <fullName>Audit</fullName>
    <columns>NAME</columns>
    <columns>LogDate__c</columns>
    <columns>Level__c</columns>
    <columns>Source__c</columns>
    <columns>Code__c</columns>
    <columns>LogText__c</columns>
    <columns>IsProcessed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Level__c</field>
        <operation>equals</operation>
        <value>Audit</value>
    </filters>
    <label>All Audit</label>
    <language>en_US</language>
</ListView>